syntax = "proto3";

package telemetry.message.event;

option java_multiple_files = true;
import "google/protobuf/timestamp.proto";
option java_package = "ru.yandex.practicum.grpc.telemetry.event";

message SensorEvent {
  string id = 1;
  google.protobuf.Timestamp timestamp = 2;
  string hubId = 3;

  oneof payload {
      MotionSensorEvent motion_Sensor_Event = 4;
      TemperatureSensorEvent temperature_Sensor_Event = 5;
      LightSensorEvent light_Sensor_Event = 6;
      ClimateSensorEvent climate_Sensor_Event = 7;
      SwitchSensorEvent switch_Sensor_Event = 8;
  }
}

message MotionSensorEvent {
  int32 link_quality = 1;
  bool motion = 2;
  int32 voltage = 3;
}

message TemperatureSensorEvent {
  int32 temperature_c = 1;
  int32 temperature_f = 2;
}

message LightSensorEvent {
  int32 link_quality = 1;
  int32 luminosity = 2;
}

message ClimateSensorEvent {
  int32 temperature_c = 1;
  int32 humidity = 2;
  int32 co2_level = 3;
}

message SwitchSensorEvent {
  bool state = 1;
}
